--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav{
 nav img{
     height: 100px;
     border-radius: 50%;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
 }
 .nav-links{
     flex: 1;
@@ -82,8 +83,9 @@ nav img{
 }
 .hero-btn:hover{
     border: 1px solid transparent;
-    background: rgb(221, 88, 88);
+    background: rgb(255, 255, 255);
     transition: 0.3s;
+    color: black;
 }
 
 nav .fa-solid{
@@ -104,6 +106,7 @@ nav .fa-solid{
         width: 200px;
         top: 0;
         right: -200px;
+        display: none;
         text-align: left;
         z-index: 2;
         transition: 0.5s;
@@ -129,10 +132,11 @@ nav .fa-solid{
     padding-top: 25px;
     background-color: rgb(31, 31, 31);
 }
+
 h1{
     color: white;
     font-size: 36px;
-    font-weight: 600;
+    font-weight: bold;
 }
 
 p{
@@ -147,6 +151,7 @@ p{
 .row{
     display: flex;
     justify-content: space-between;
+    perspective: 500px;
 }
 
 .wit-col{
@@ -161,6 +166,7 @@ p{
     padding: 20px 12px;
     box-sizing: border-box;
     transition: 0.5s;
+    transform: rotatex(20deg);
 }
 h3{
     color: white;
@@ -169,11 +175,90 @@ h3{
     margin: 10px 0;
 }
 .wit-col:hover{
-    box-shadow: 0 0 20px 0px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
+    transform: rotateX(0deg);
 }
 
 @media(max-width: 700px){
     .row{
         flex-direction: column;
+        perspective: none;
+    }
+    .wit-col{
+        transform: rotateX(0deg);
+    }
+}
+
+/*Rodar Bot*/
+
+.rb{
+    background-color: #313338;
+    padding: 30px 10px;
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
+}
+.rb h1{
+    font-size: 100px;
+    text-shadow: #1E2124;
+    padding-left: 20px;
+}
+.rb h2{
+    color: white;
+    font-size: 50px;
+    padding-left: 40px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    text-shadow: #1E2124;
+}
+.rb p{
+    padding-left: 50px;
+    padding-bottom: 30px;
+}
+.botimages{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    overflow: visible;
+    perspective: 1500px;
+    padding: 0 10px;
+}
+.botimages img{
+    width: 400px;
+    object-fit: scale-down;
+    transform: rotatey(10deg);
+    transition: 1s;
+}
+.botimages img:hover{
+    transform: rotatey(0deg);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
+}
+.commands{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    gap: 40px;
+}
+.cmd-col{
+    background-color: #282B30;
+    padding: 10px 10px;
+    border-radius: 10px;
+    outline-color: #1E2124;
+    outline-style: solid;
+    outline-width: 5px;
+    box-shadow: 0 0 20px 0px rgb(0, 0, 0);
+}
+.cmd-col{
+
+}
+.cmd-col p{
+    text-align: center;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-bottom: 10px;
+}
+
+@media(max-width: 700px){
+    .botimages{
+        flex-direction: column;
+        gap: 20px;
     }
 }
