--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@ h3{
 }
 .rb h1{
     font-size: 100px;
-    text-shadow: #1E2124;
     padding-left: 20px;
 }
 .rb h2{
@@ -207,7 +206,6 @@ h3{
     padding-left: 40px;
     padding-top: 20px;
     padding-bottom: 30px;
-    text-shadow: #1E2124;
 }
 .rb p{
     padding-left: 50px;
@@ -236,6 +234,7 @@ h3{
     flex-direction: column;
     justify-content:space-evenly;
     gap: 40px;
+    margin-bottom: 30px;
 }
 .cmd-col{
     background-color: #282B30;
@@ -245,9 +244,6 @@ h3{
     outline-style: solid;
     outline-width: 5px;
     box-shadow: 0 0 20px 0px rgb(0, 0, 0);
-}
-.cmd-col{
-
 }
 .cmd-col p{
     text-align: center;
@@ -261,4 +257,34 @@ h3{
         flex-direction: column;
         gap: 20px;
     }
+}
+.rodarheader{
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/rodarbanner.jpg);
+    width: 100%;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    background-size:cover;
+    justify-content:center;
+    align-items:start;
+}
+.rodarheader a{
+    margin-left: 100px;
+    color: white;
+    display: inline-block;
+    font-size: 30px;
+    font-weight: bold;
+    background: transparent;
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 12px 30px;
+    transition: 0.3s;
+}
+.rodarheader a:hover{
+    background: white;
+    color: black;
+    border: 10px solid black;
 }
