--- a/style.css
+++ b/style.css
@@ -251,13 +251,6 @@ h3{
     margin-right: 0px;
     padding-bottom: 10px;
 }
-
-@media(max-width: 700px){
-    .botimages{
-        flex-direction: column;
-        gap: 20px;
-    }
-}
 .rodarheader{
     background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),url(images/rodarbanner.jpg);
     width: 100%;
@@ -289,4 +282,13 @@ h3{
     color: black;
     border: 10px solid black;
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.5);
+}
+@media(max-width: 700px){
+    .botimages{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .rodarheader{
+        align-items: center;    
+    }
 }
