--- a/style.css
+++ b/style.css
@@ -293,3 +293,69 @@ h3{
         align-items: center;    
     }
 }
+
+/*Spotify Stats*/
+
+.spotifystats{
+    background-color: #212121;
+    padding: 10px 10px;
+}
+.stats h1{
+    color: #1db954;
+    font-size: 80px;
+}
+.stats p{
+    font-size: 50px;
+    margin-bottom: 80px;
+    margin-top: 20px;
+}
+.textandimg{
+    display: flex;
+    justify-content: baseline;
+    flex-direction: row;
+    gap: 10px;
+}
+.taicol{
+    background-color: #121212;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+    flex-grow: 1;
+}
+.taicol p{
+    padding-top: 50px;
+    padding-left: 10px;
+    font-size: 40px;
+}
+.taicol img{
+    padding-bottom: 30px;
+}
+.stats p a{
+    margin-left: 100px;
+    color: #1db954;
+    display: inline-block;
+    font-size: 50px;
+    font-weight: bold;
+    background: transparent;
+    cursor: pointer;
+    display: inline-block;
+    text-decoration: none;
+    color: #1db954;
+    border: 1px solid #1db954;
+    margin-top: 30px;
+    padding: 32px 30px;
+    transition: 0.3s;
+}
+.stats p a:hover{
+    background: #1db954;
+    color: #121212;
+    border: 1px solid #121212;
+    box-shadow: 0 0 20px 0px rgba(29, 185, 84, 0.5);
+}
+.btnstats{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
